src/objects/servicegroup__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>servicerequest__r.customer__r.Name</formula>
        <label>#客户名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>user__r.Email</formula>
        <label>#用户邮箱</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>成员1角色</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>第一负责人</fullName>
                    <default>true</default>
                    <label>第一负责人</label>
                </value>
                <value>
                    <fullName>第二负责人</fullName>
                </value>
                <value>
                    <fullName>协助解决人员</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>服务小组目的</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>协同安装</fullName>
                    <default>true</default>
                    <label>协同安装</label>
                </value>
                <value>
                    <fullName>协同维修</fullName>
                </value>
                <value>
                    <fullName>协同巡检</fullName>
                </value>
                <value>
                    <fullName>疑难问题解决</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <formula>user__r.FirstName  &amp;  user__r.LastName</formula>
        <label>#用户名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <label>成员2角色</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>第一负责人</fullName>
                    <default>true</default>
                    <label>第一负责人</label>
                </value>
                <value>
                    <fullName>第二负责人</fullName>
                </value>
                <value>
                    <fullName>协助解决人员</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3__c</fullName>
        <label>成员3角色</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>第一负责人</fullName>
                    <default>true</default>
                    <label>第一负责人</label>
                </value>
                <value>
                    <fullName>第二负责人</fullName>
                </value>
                <value>
                    <fullName>协助解决人员</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>group_member2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>小组成员2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Q2I5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>group_member3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>小组成员3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Q2IU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>serName__c</fullName>
        <formula>servicerequest__r.Name</formula>
        <label>#服务请求名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>servicerequest__c</fullName>
        <label>服务请求</label>
        <referenceTo>servicerequest__c</referenceTo>
        <relationshipLabel>服务小组</relationshipLabel>
        <relationshipName>OPZq</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>小组成员1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EBmd</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>服务小组</label>
    <listViews>
        <fullName>All</fullName>
        <columns>serName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AccountName__c</columns>
        <columns>Field2__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>user__c</columns>
        <columns>Field1__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>SG-{YYYY}{MM}-{0000}</displayFormat>
        <label>编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>服务小组</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>